--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -10,10 +10,11 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
+set $terminal "alacritty"
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 14
+font pango:Meslo LGM Nerd Font 15
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -42,16 +43,17 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ to
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
 # Use Mouse+$mod to drag floating windows to their wanted position
-bindsym $mod+Return exec i3-sensible-terminal
+
+bindsym $mod+Return exec $terminal
 
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
+# bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
-# bindcode $mod+40 exec "rofi -modi drun,run -show drun"
+bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
@@ -112,9 +114,9 @@ bindsym $mod+a focus parent
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1: edge"
-set $ws2 "2: terminal"
-set $ws3 "3"
+set $ws1 "1 "
+set $ws2 "2 "
+set $ws3 "3 "
 set $ws4 "4"
 set $ws5 "5"
 set $ws6 "6"
@@ -183,13 +185,45 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3status
-}
+#bar {
+#        status_command i3status
+#}
 
-exec_always feh --bg-fill /home/ismatse/Pictures/wallhaven-l8eejy.jpg
+# My customization
 
-gaps inner 5
-gaps outer 5
+assign [instance="web.whatsapp.com"] $ws3
+assign [class="Microsoft-edge"] $ws1
+assign [class="Alacritty"] $ws2
 
-default_border pixel 0
+# execs
+
+exec_always --no-startup-id picom --experimental-backends --config $HOME/.config/picom/picom.conf 
+exec --no-startup-id feh --bg-scale $HOME/Pictures/wallhaven-l8eejy.jpg
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh 
+exec --no-startup-id $terminal
+exec --no-startup-id $HOME/.local/bin/whatsapp-edge.sh
+exec --no-startup-id microsoft-edge 
+
+gaps inner 10
+gaps outer 0
+
+default_border pixel 2
+
+# Set colors from Xresources
+# Change 'color7' and 'color2' to whatever colors you want i3 to use 
+# from the generated scheme.
+# NOTE: The '#f0f0f0' in the lines below is the color i3 will use if
+# it fails to get colors from Xresources.
+set_from_resource $c1 i3wm.color1  #DA5528  # rojo‑naranja
+set_from_resource $c5 i3wm.color5  #8B5C97  # lila
+set_from_resource $c7 i3wm.color7  #f4dad2  # crema
+
+# class                 border  backgr. text  indicator child_border
+client.focused          $c1     $c1    $c7    $c5       $c1
+client.focused_inactive $c7     $c7    $c7    $c5       $c7
+client.unfocused        $c7     $c7    $c7    $c5       $c7
+client.urgent           $c1     $c1    $c7    $c1       $c1
+client.placeholder      $c7     $c7    $c7    $c7       $c7
+client.background       $c7
+
+# Bindigs
