--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -197,6 +197,9 @@ assign [class="Alacritty"] $ws2
 
 # execs
 
+exec --no-startup-id xset s off
+exec --no-startup-id xset -dpms
+exec --no-startup-id xset s noblank
 exec_always --no-startup-id picom --experimental-backends --config $HOME/.config/picom/picom.conf 
 exec --no-startup-id feh --bg-scale $HOME/Pictures/wallhaven-l8eejy.jpg
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh 
