--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -231,3 +231,4 @@ client.placeholder      $c7     $c7    $c7    $c7       $c7
 client.background       $c7
 
 # Bindigs
+bindsym Print exec NOW=$(date +%d-%b-%Y_%H-%M-%S) && maim --format png --select > ~/screenshots/screenshot_$NOW.png && xclip -selection clip -t image/png ~/screenshots/screenshot_$NOW.png
