--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -313,6 +313,7 @@ rules: ({
   shadow = false;
 });
 opacity-rule = [
+  "100:class_g = 'Alacritty'",
   "100:class_g = 'Microsoft-edge' && name != 'web.whatsapp.com'"
 ];
 # `@include` directive can be used to include additional configuration files.
