--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -131,14 +131,15 @@ label-muted-foreground = ${colors.disabled}
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
-
+layouts = us es  
 label-layout = %layout%
 label-layout-foreground = ${colors.primary}
 
 label-indicator-padding = 2
 label-indicator-margin = 1
 label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.secondary}
+label-indicator-background = ${colors.secondary
+click-left  = xkeyboard/switch
 
 [module/memory]
 type = internal/memory
