--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -61,7 +61,7 @@ fade-in-step = 0.1;
 fade-out-step = 0.1;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-fade-delta = 20
+fade-delta = 20;
 
 # Do not fade on window open/close.
 # no-fading-openclose = false
@@ -314,7 +314,8 @@ rules: ({
 });
 opacity-rule = [
   "100:class_g = 'Alacritty'",
-  "100:class_g = 'Microsoft-edge' && name != 'web.whatsapp.com'"
+  "100:class_g = 'Microsoft-edge' && name != 'web.whatsapp.com'",
+  "100:class_g = 'Code'"
 ];
 # `@include` directive can be used to include additional configuration files.
 # Relative paths are search either in the parent of this configuration file
