--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -55,7 +55,8 @@ separator-foreground = ${colors.disabled}
 font-0 ="MesloLGM Nerd Font:pixelsize=15;0" 
 
 modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
+; modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
+modules-right = pulseaudio backlight xkeyboard bluetooth-simple info-camera-mic memory battery date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -105,35 +106,39 @@ label-empty-padding = 1
 type = internal/xwindow
 label = %title:0:60:...%
 
-[module/filesystem]
-type = internal/fs
-interval = 25
-
-mount-0 = /
-
-label-mounted = %{F#DA5528}%mountpoint%%{F-} %percentage_used%%
-
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.disabled}
+; [module/filesystem]
+; type = internal/fs
+; interval = 25
+;
+; mount-0 = /
+;
+; label-mounted = %{F#DA5528}%mountpoint%%{F-} %percentage_used%%
+;
+; label-unmounted = %mountpoint% not mounted
+; label-unmounted-foreground = ${colors.disabled}
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "VOL "
+format-volume-prefix = " "
 format-volume-prefix-foreground = ${colors.primary}
 format-volume = <label-volume>
 
 label-volume = %percentage%%
 
-label-muted = muted
-label-muted-foreground = ${colors.disabled}
+format-muted-prefix = " "
+format-muted-prefix-foreground = ${colors.primary}
+# label-muted-foreground = ${colors.disabled}
+label-muted = 
 
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
-layouts = us es  
+layouts = us es 
+format-prefix = "  "
+format-prefix-foreground = ${colors.primary}
 label-layout = %layout%
-label-layout-foreground = ${colors.primary}
+# label-layout-foreground = ${colors.primary}
 
 label-indicator-padding = 2
 label-indicator-margin = 1
@@ -148,30 +153,30 @@ format-prefix = "RAM "
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
 
-[module/cpu]
-type = internal/cpu
-interval = 2
-format-prefix = "CPU "
-format-prefix-foreground = ${colors.primary}
-label = %percentage:2%%
+; [module/cpu]
+; type = internal/cpu
+; interval = 2
+; format-prefix = "CPU "
+; format-prefix-foreground = ${colors.primary}
+; label = %percentage:2%%
 
-[network-base]
-type = internal/network
-interval = 5
-format-connected = <label-connected>
-format-disconnected = <label-disconnected>
-label-disconnected = %{F#DA5528}%ifname%%{F#707880} disconnected
+; [network-base]
+; type = internal/network
+; interval = 5
+; format-connected = <label-connected>
+; format-disconnected = <label-disconnected>
+; label-disconnected = %{F#DA5528}%ifname%%{F#707880} disconnected
 
-[module/wlan]
-inherit = network-base
-interface-type = wireless
-interface = wlo1
-label-connected = %{F#DA5528}%ifname%%{F-} %essid% %local_ip%
+; [module/wlan]
+; inherit = network-base
+; interface-type = wireless
+; interface = wlo1
+; label-connected = %{F#DA5528}%ifname%%{F-} %essid% %local_ip%
 
-[module/eth]
-inherit = network-base
-interface-type = wired
-label-connected = %{F#DA5528}%ifname%%{F-} %local_ip%
+; [module/eth]
+; inherit = network-base
+; interface-type = wired
+; label-connected = %{F#DA5528}%ifname%%{F-} %local_ip%
 
 [module/date]
 type = internal/date
@@ -180,8 +185,116 @@ interval = 1
 date = %H:%M
 date-alt = %Y-%m-%d %H:%M:%S
 
+format-prefix = " "
+format-prefix-foreground = ${colors.primary}
 label = %date%
 label-foreground = ${colors.foreground-alt}
+
+[module/backlight]
+type = internal/backlight
+card = intel_backlight
+use-actual-brightness = true
+poll-interval = 0
+enable-scroll = true
+scroll-interval = 10
+format-prefix = " "
+format-prefix-foreground = ${colors.primary}
+format = <label>
+label = %percentage%%
+ramp-0 = 🌕
+ramp-1 = 🌔
+ramp-2 = 🌓
+ramp-3 = 🌒
+ramp-4 = 🌑
+
+[module/battery]
+type = internal/battery
+full-at = 99
+low-at = 5
+battery = BAT0
+adapter = ADP1
+poll-interval = 5
+
+time-format = %H:%M
+format-charging-prefix = " "
+format-charging-prefix-foreground = ${colors.primary}
+format-charging = <animation-charging> <label-charging>
+
+format-discharging-prefix = " "
+format-discharging-prefix-foreground = ${colors.primary}
+format-discharging = <ramp-capacity> <label-discharging>
+
+format-full-prefix = " "
+format-full-prefix-foreground = ${colors.primary}
+format-full = <ramp-capacity> <label-full>
+
+format-low-prefix = " "
+format-low-prefix-foreground = ${colors.primary}
+format-low = <label-low> <animation-low>
+
+
+label-charging = Charging %percentage%%
+label-discharging = %percentage%%
+label-full = Fully charged
+label-low = BATTERY LOW
+
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+
+bar-capacity-width = 10
+
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+animation-charging-framerate = 750
+
+animation-discharging-0 = 
+animation-discharging-1 = 
+animation-discharging-2 = 
+animation-discharging-3 = 
+animation-discharging-4 = 
+animation-discharging-framerate = 500
+
+animation-low-0 = !
+animation-low-1 = 
+animation-low-framerate = 200
+
+[module/bluetooth-simple]
+type = custom/script
+exec = ~/.config/polybar/scripts/bluetooth-simple.sh
+interval = 5
+format-prefix = "  "
+format-prefix-foreground = ${colors.primary}
+
+[module/system-bluetooth-bluetoothctl]
+type = custom/script
+exec = ~/.config/polybar/scripts/system-bluetooth-bluetoothctl.sh
+tail = true
+click-left = ~/.config/polybar/scripts/system-bluetooth-bluetoothctl.sh --toggle &
+
+[module/info-timezone]
+type = custom/script
+exec = ~/.config/polybar/scripts/info-timezone.sh
+tail = true
+click-left = pkill -USR1 -f info-timezone.sh
+
+[module/info-camera-mic]
+type = custom/script
+exec = ~/.config/polybar/scripts/info-camera-mic.sh
+interval = 2
+format-prefix = "  "
+format-prefix-foreground = ${colors.primary}
+
+[module/popup-calendar]
+type = custom/script
+exec = ~/.config/polybar/scripts/popup-calendar.sh
+interval = 5
+click-left = ~/polybar-scripts/popup-calendar.sh --popup &
 
 [settings]
 screenchange-reload = true
