add nvim support for jupyter nb

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -314,6 +314,7 @@ rules: ({
 });
 opacity-rule = [
   "100:class_g = 'Alacritty'",
+  "100:class_i = 'ghostty'",
   "100:class_g = 'Microsoft-edge' && name != 'web.whatsapp.com'",
   "100:class_g = 'Code'"
 ];
