--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -10,7 +10,7 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod1
-set $terminal "alacritty"
+set $terminal "ghostty"
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -200,7 +200,7 @@ bindsym Print exec flameshot gui -p ~/Pictures/Screenshots
 
 assign [instance="web.whatsapp.com"] $ws1
 assign [class="Microsoft-edge"] $ws2
-assign [class="Alacritty"] $ws3
+assign [class=$terminal] $ws3
 
 # execs
 
