--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -2,6 +2,7 @@ unbind r
 bind r source-file ~/.config/tmux/tmux.conf
 
 set -g mouse on
+set -g allow-passthrough on
 set-option -sa terminal-overrides ",xterm*:Tc"
 
 bind-key h select-pane -L
