--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -316,7 +316,8 @@ opacity-rule = [
   "100:class_g = 'Alacritty'",
   "100:class_i = 'ghostty'",
   "100:class_g = 'Microsoft-edge' && name != 'web.whatsapp.com'",
-  "100:class_g = 'Code'"
+  "100:class_g = 'Code'",
+  "100:class_g = 'Chat-gpt'"
 ];
 # `@include` directive can be used to include additional configuration files.
 # Relative paths are search either in the parent of this configuration file
