feat: add notion config

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -317,7 +317,8 @@ opacity-rule = [
   "100:class_i = 'ghostty'",
   "100:class_g = 'Microsoft-edge' && name != 'web.whatsapp.com'",
   "100:class_g = 'Code'",
-  "100:class_g = 'Chat-gpt'"
+  "100:class_g = 'ChatGPT Desktop'",
+  "100:class_g = 'notion-desktop'"
 ];
 # `@include` directive can be used to include additional configuration files.
 # Relative paths are search either in the parent of this configuration file
