--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -122,7 +122,7 @@ set $ws1 "1 "
 set $ws2 "2 "
 set $ws3 "3 "
 set $ws4 "4 󱚞"
-set $ws5 "5"
+set $ws5 "5 "
 set $ws6 "6"
 set $ws7 "7"
 set $ws8 "8"
@@ -201,7 +201,8 @@ bindsym Print exec flameshot gui -p ~/Pictures/Screenshots
 assign [instance="web.whatsapp.com"] $ws1
 assign [class="Microsoft-edge"] $ws2
 assign [class=$terminal] $ws3
-assign [class="Chat-gpt"] $ws4
+assign [class="ChatGPT Desktop"] $ws4
+assign [class="notion-desktop"] $ws5
 
 # execs
 
@@ -216,7 +217,8 @@ exec_always --no-startup-id setxkbmap -layout us,es -option grp:rwin_toggle,comp
 exec --no-startup-id $terminal
 exec --no-startup-id $HOME/.local/bin/whatsapp-edge.sh
 exec --no-startup-id microsoft-edge 
-exec --no-startup-id chat-gpt
+exec --no-startup-id chatgpt-desktop
+exec --no-startup-id notion-desktop
 for_window [class="Yad" title="yad-calendar"] floating enable
 
 gaps inner 10
